--- a/src/main/java/org/cartaro/geoserver/web/security/drupal/DrupalUserGroupServicePanel.html
+++ b/src/main/java/org/cartaro/geoserver/web/security/drupal/DrupalUserGroupServicePanel.html
@@ -31,6 +31,10 @@
               <label for="databaseHost"><wicket:message key="databasePassword"></wicket:message></label>
               <input id="databaseHost" wicket:id="databasePassword" type="text" class="text"></input>
             </li>
+            <li>
+              <label for="usePrefix"><wicket:message key="usePrefix"></wicket:message></label>
+              <input id="usePrefix" wicket:id="usePrefix" type="checkbox" class="checkbox"></input>
+            </li>
           </ul>
         </fieldset>
       </li>
