display the version of geoserver-sec-drupal on the AuthenticationProvider configuration page in the web interface [refs #4030016]

--- a/src/main/java/org/cartaro/geoserver/web/security/drupal/DrupalAuthProviderPanel.html
+++ b/src/main/java/org/cartaro/geoserver/web/security/drupal/DrupalAuthProviderPanel.html
@@ -38,6 +38,25 @@
           </ul>
         </fieldset>
       </li>
+      
+      <li>
+		<fieldset>
+          <legend>
+            <span><wicket:message key="drupalExtensionInfo"></wicket:message></span>
+          </legend>
+          <ul>
+            <li>
+              <label for="drupalExtensionVersion"><wicket:message key="drupalExtensionVersion"></wicket:message></label>
+              <span wicket:id="drupalExtensionVersion"></span>
+            </li>
+            <li>
+              <label for="drupalExtensionGitVersion"><wicket:message key="drupalExtensionGitVersion"></wicket:message></label>
+              <span wicket:id="drupalExtensionGitVersion"></span>
+            </li>
+          </ul>
+        </fieldset>
+    </li>  
+      
     </ul>
 </wicket:extend>
 </body>
