--- a/src/main/java/org/cartaro/geoserver/web/security/drupal/DrupalAuthProviderPanel.html
+++ b/src/main/java/org/cartaro/geoserver/web/security/drupal/DrupalAuthProviderPanel.html
@@ -33,7 +33,12 @@
             </li>
             <li>
               <label for="usePrefix"><wicket:message key="usePrefix"></wicket:message></label>
-              <input id="usePrefix" wicket:id="usePrefix" type="checkbox" class="checkbox"></input>
+
+                 <input id="usePrefix" wicket:id="usePrefix" type="checkbox" class="checkbox"></input>
+                           <p>
+              When GeoServer is shared by multiple Cartaro instances it is necessary to enable this option to make Drupal instances distinguishable in GeoServer.
+             </p>
+    
             </li>
           </ul>
         </fieldset>
