--- a/src/main/java/org/cartaro/geoserver/web/security/drupal/DrupalUserGroupServicePanel.html
+++ b/src/main/java/org/cartaro/geoserver/web/security/drupal/DrupalUserGroupServicePanel.html
@@ -34,6 +34,9 @@
             <li>
               <label for="usePrefix"><wicket:message key="usePrefix"></wicket:message></label>
               <input id="usePrefix" wicket:id="usePrefix" type="checkbox" class="checkbox"></input>
+              <p>
+              	<wicket:message key="usePrefixExplanation"></wicket:message>
+              </p>
             </li>
           </ul>
         </fieldset>
