Enable mapping of Drupal Permission to Admin Role in GeoServer. [refs #3110040]
- Store configured Admin roles.
- Add additional role for all users having the 'administer geoserver' permission in drupal.
- Use configured admin roles to add geoserver system roles.

--- a/src/main/java/org/cartaro/geoserver/web/security/drupal/DrupalUserGroupServicePanel.html
+++ b/src/main/java/org/cartaro/geoserver/web/security/drupal/DrupalUserGroupServicePanel.html
@@ -16,20 +16,20 @@
               <input id="databaseHost" wicket:id="databaseHost" type="text" class="text"></input>
             </li>
             <li>
-              <label for="databaseHost"><wicket:message key="databasePort"></wicket:message></label>
-              <input id="databaseHost" wicket:id="databasePort" type="text" class="text"></input>
+              <label for="databasePort"><wicket:message key="databasePort"></wicket:message></label>
+              <input id="databasePort" wicket:id="databasePort" type="text" class="text"></input>
             </li>
             <li>
-              <label for="databaseHost"><wicket:message key="databaseName"></wicket:message></label>
-              <input id="databaseHost" wicket:id="databaseName" type="text" class="text"></input>
+              <label for="databaseName"><wicket:message key="databaseName"></wicket:message></label>
+              <input id="databaseName" wicket:id="databaseName" type="text" class="text"></input>
             </li>
             <li>
-              <label for="databaseHost"><wicket:message key="databaseUser"></wicket:message></label>
-              <input id="databaseHost" wicket:id="databaseUser" type="text" class="text"></input>
+              <label for="databaseUser"><wicket:message key="databaseUser"></wicket:message></label>
+              <input id="databaseUser" wicket:id="databaseUser" type="text" class="text"></input>
             </li>
             <li>
-              <label for="databaseHost"><wicket:message key="databasePassword"></wicket:message></label>
-              <input id="databaseHost" wicket:id="databasePassword" type="text" class="text"></input>
+              <label for="databasePassword"><wicket:message key="databasePassword"></wicket:message></label>
+              <input id="databasePassword" wicket:id="databasePassword" type="text" class="text"></input>
             </li>
             <li>
               <label for="usePrefix"><wicket:message key="usePrefix"></wicket:message></label>
